tests/error/use_error_variable.bz
// error: undeclared identifier 'do_something'
// error: failed to resolve variable declaration
// note: in call to 'function foo() -> void'
// note: while evaluating expression at compile time
// error: condition for static_assert must be a constant expression
function foo()
{
	let x = do_something();
	x & 1u32;
}

static_assert((foo(), true));
